[package]
name = "btrd"
description = "The btrfs debugger"
version = "0.1.0"
repository = "https://github.com/danobi/btrd"
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
edition = "2018"
keywords = ["btrfs", "debugger"]
license = "GPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
memmap = "0.7"
nix = "0.19"
pom = "3.2"
rustyline = "7.1"
rustyline-derive = "0.4"
simplelog = "0.9"
structopt = "0.3"
