[package]
name = "btrd"
description = "The btrfs debugger"
version = "0.5.2"
repository = "https://github.com/danobi/btrd"
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
edition = "2018"
keywords = ["btrfs", "debugger"]
license = "GPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
memmap2 = "0.5"
nix = "0.23"
pom = "3.2"
rustyline = { version = "12", features = ["derive"] }
simplelog = "0.11"
structopt = "0.3"
